[ADD] Swagger 연동

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,6 @@ spring:
     path: /h2-console
     profiles:
       active: local
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
