--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,12 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
+    url: jdbc:mysql://localhost:3306/mybatis?characterEncoding=UTF-8&useTimezone=true&serverTimezone=Asia/Seoul
+    username: root
     password:
-  h2:
-    console:
-      enabled: true
-    path: /h2-console
-    profiles:
-      active: local
+  jpa:
+    database: mysql
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+mybatis:
+  type-aliases-package: com.study.springstudy2.dto
