--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,18 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mybatis?characterEncoding=UTF-8&useTimezone=true&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/testdb?characterEncoding=UTF-8&useTimezone=true&serverTimezone=Asia/Seoul
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password:
+    password: yeanwoo0619
   jpa:
+    show-sql: true
     database: mysql
+    hibernate:
+      ddl-auto: update
+    generate-ddl: true
+    properties:
+      hibernate-format_sql : true
+
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
