[ADD] Thymeleaf 라이브러리 추가

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,11 @@ dependencies {
     //mysql
     runtimeOnly 'mysql:mysql-connector-java'
 
+    //thymeleaf
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     //swagger
